--- a/Anchor.toml
+++ b/Anchor.toml
@@ -8,7 +8,7 @@ onchain_voting = "FMXhCUbZYKGPFFV4ff8ipp61FUXdXJvRqm7L3tAvpUak"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+cluster = "devnet"
 wallet = "/Users/hangyeonghyeon/.config/solana/id.json"
 
 [scripts]
