--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "daisyui": "^1.24.3",
     "date-fns": "^2.29.3",
+    "dotenv": "^16.3.1",
     "immer": "^9.0.12",
     "next": "^13.1.5",
     "next-compose-plugins": "^2.2.1",
